methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:41: error: not found: value c
     fourV(c:Color);
           ^